--- a/index.html
+++ b/index.html
@@ -174,11 +174,11 @@
         </div>
     <div class="cards" style="align-items: center;">
       <div class="card" style="width: 13rem;height: 20rem;">
-      <a href="#" style="text-decoration:none;"><img style="height:17rem;" class="card-img-top" src="https://images.unsplash.com/photo-1616849540275-0bc274e2a474?ixid=MnwxMjA3fDB8MHxzZWFyY2h8OHx8dGFtaWxuYWR1fGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=200&q=60" alt="Card image cap"></a> 
+      <a href="vv.html" style="text-decoration:none;"><img style="height:17rem;" class="card-img-top" src="https://images.unsplash.com/photo-1616849540275-0bc274e2a474?ixid=MnwxMjA3fDB8MHxzZWFyY2h8OHx8dGFtaWxuYWR1fGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=200&q=60" alt="Card image cap"></a> 
       <p style="font-size:1rem;font-weight: 700;text-align: center;margin-top: 5px;font-style: 'poppins',sans-serif;">Andhra pradesh</p>
       </div>
       <div class="card" style="width: 13rem;height: 20rem;">
-        <a href="#" style="text-decoration:none;"><img style="height:17rem;" class="card-img-top" src="https://images.unsplash.com/photo-1589820745206-c6b6d3602361?ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8dGVsYW5nYW5hfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=200&q=60" alt="Card image cap"></a>
+        <a href="vv2.html" style="text-decoration:none;"><img style="height:17rem;" class="card-img-top" src="https://images.unsplash.com/photo-1589820745206-c6b6d3602361?ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8dGVsYW5nYW5hfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=200&q=60" alt="Card image cap"></a>
         <p style="font-size:1rem;font-weight: 700;text-align: center;margin-top: 5px;font-style: 'poppins',sans-serif;">Tamilnadu</p>
       </div>
       <div class="card" style="width: 13rem; height: 20rem;">
@@ -282,11 +282,13 @@
             <div class="well-middle">
               <div class="single-well">
                 <a href="#">
-                  <p style="font-size: 6rem;line-height: 1;font-weight: bolder;">About<br>Us</p>
+                  <p style="font-size: 5rem;line-height: 1;font-weight: bolder;">About Us</p>
                 </a>
+                <br>
                 <p style="font-size:1.2rem">
                     Apes Together Strong, Well that is what we are. Solely to improve others health and life
                 </p>
+                <br>
                 <a href="team.html" style=" background-color:#3ec1d5;
                 border-radius: 20px;
                   border: none;
@@ -321,8 +323,100 @@
     <!-- End About Section -->
         <!-- start state Section -->
 
+   <!-- ======= new blog Section ======= -->
+   <section id="team" class="team section-bg">
+    <div class="container">
+
+      <div class="row">
+        <div class="col-md-12 col-sm-12 col-xs-12">
+          <div class="section-headline text-center">
+            <h2>Blog</h2>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+
+        <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+          <div class="member" data-aos="fade-up" data-aos-delay="100">
+            <div class="member-img">
+              <img src="assets/img/team/pakistan-getty.jpeg" class="img-fluid" alt="">
+              <div class="social">
+                <a href=""><i class="bi bi-twitter"></i></a>
+                <a href=""><i class="bi bi-facebook"></i></a>
+                <a href=""><i class="bi bi-instagram"></i></a>
+                <a href=""><i class="bi bi-linkedin"></i></a>
+              </div>
+            </div>
+            <div class="member-info">
+              <h4>Pakistan bans travel from 15 countries amid looming Omicron threat</h4>
+              <span></span>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+          <div class="member" data-aos="fade-up" data-aos-delay="200">
+            <div class="member-img">
+              <img src="assets/img/team/maha.jpeg" class="img-fluid" alt="">
+              <div class="social">
+                <a href=""><i class="bi bi-twitter"></i></a>
+                <a href=""><i class="bi bi-facebook"></i></a>
+                <a href=""><i class="bi bi-instagram"></i></a>
+                <a href=""><i class="bi bi-linkedin"></i></a>
+              </div>
+            </div>
+            <div class="member-info">
+              <h4>Omicron: Decision needed at national level on booster dose, says Maharashtra Deputy CM Ajit Pawar</h4>
+              <span></span>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+          <div class="member" data-aos="fade-up" data-aos-delay="300">
+            <div class="member-img">
+              <img src="assets/img/team/decision.jpeg" class="img-fluid" alt="">
+              <div class="social">
+                <a href=""><i class="bi bi-twitter"></i></a>
+                <a href=""><i class="bi bi-facebook"></i></a>
+                <a href=""><i class="bi bi-instagram"></i></a>
+                <a href=""><i class="bi bi-linkedin"></i></a>
+              </div>
+            </div>
+            <div class="member-info">
+              <h4>No decision yet on vaccine for kids, booster doses</h4>
+              <span></span>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+          <div class="member" data-aos="fade-up" data-aos-delay="400">
+            <div class="member-img">
+              <img src="assets/img/team/coetzee.jpeg" class="img-fluid" alt="">
+              <div class="social">
+                <a href=""><i class="bi bi-twitter"></i></a>
+                <a href=""><i class="bi bi-facebook"></i></a>
+                <a href=""><i class="bi bi-instagram"></i></a>
+                <a href=""><i class="bi bi-linkedin"></i></a>
+              </div>
+            </div>
+            <div class="member-info">
+              <h4>Omicron causing mild disease, few hospitalisations, says doctor who tracked variant first</h4>
+              <span></span>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+  </section><!-- End Team Section -->
+
+
     <!-- ======= Services Section ======= -->
-    <div id="services" class="services-area area-padding" style="background: white;box-shadow: 0 0 15px 0px #051d40;
+    <div id="services" class="services-area area-padding" ;
 ">
       <div class="container">
         <div class="row">
